revisi 2.2.5, penulisan 2.2.6-2.2.8, penambahan 2.2.9

--- a/Bank Soal/Semester 1/Kalkulus I/Bank Soal Kalkulus I.tex
+++ b/Bank Soal/Semester 1/Kalkulus I/Bank Soal Kalkulus I.tex
@@ -26,9 +26,6 @@
 \usepackage{etex}
 \usepackage{tkz-euclide}
 
-%% Impor semua objek tkz %%
-\usetkzobj{all}
-
 %% Impor library tikz %%
 \usetikzlibrary{shapes}
 \usetikzlibrary{arrows}
@@ -263,6 +260,7 @@
 		\item Tentukan $ \ds{\int{\func{\cos^{2}}{x} \diff{x}}} - \ds{\int{\left(1 - \func{\sin^{2}}{x}\right) \diff{x}}} $.
 		\item Misalkan $ S $ himpunan titik-titik dimana fungsi real $ \func{f}{x} = \left|2 - \left|x - 3\right|\right| $ tak terturunkan. Tentukan nilai dari
 		\[ \sum_{x \in S}{\func{\left(f \circ f\right)}{x}}. \]
+		\item Pemerintah daerah Kota Bontang berencana akan membuat rumah tahanan (rutan). Rutan tersebut terdiri dari 5 blok dan setiap bloknya terdiri dari tiga sel penjara yang berdampingan. Tepi kanan dan tepi kiri setiap blok dibatasi oleh tembok. Begitu juga dengan bagian belakang bloknya. Pemerintah Kota Bontang menginginkan setiap sel penjara memiliki jeruji besi yang berkualitas, namun harganya terjangkau. Setelah proses pencarian jeruji besi, didapatkan jeruji besi yang dijual seharga Rp2.500.000,00 per meternya. Asumsikan setiap sel penjara memiliki panjang dan lebar yang sama. Jika masing-masing sel penjara direncanakan memiliki luas $ 30 m^{2} $, tentukan panjang dan lebar setiap sel penjara agar biaya total pemasangan jeruji besi di rutan tersebut seminimum mungkin. Tentukan juga berapa biaya totalnya.
 		\item Diketahui $ \func{f}{\dfrac{x - 1}{2x + 3}} = x^{2} - 4x + 3 $. Tentukan nilai dari $ \func{f^{\prime}}{0} $.
 		\item Diketahui $ \func{f}{x + y} = \func{f}{x} + \func{f}{y} + x^{2}y - 4xy^{2} $ dan $ \displaystyle{\lim_{x \to 0}{\frac{\func{f}{x}}{x}} = 0} $. Tentukan bilangan real positif $ a $ yang memenuhi $ \func{f^{\prime}}{a} = 2021 $.
 		\item Diketahui fungsi $ f, g : \mathbb{R} \to \mathbb{R} $ dengan $ \func{f}{x} = \begin{cases}
