--- a/Modul Kuliah/Aljabar/Modul Aljabar.tex
+++ b/Modul Kuliah/Aljabar/Modul Aljabar.tex
@@ -12,6 +12,7 @@
 \usepackage{tcolorbox}
 \usepackage{appendix}
 \usepackage{multicol}
+\usepackage{icomma}
 \usepackage{systeme}
 \usepackage{float}
 \usepackage{pgfplots}
@@ -192,6 +193,7 @@
 %% Buat notasi-notasi yang menggunakan teks roman %%
 \newcommand*{\transpose}{\mathop{}\!\mathrm{T}}
 \newcommand*{\comp}{\mathop{}\!\mathrm{C}}
+\newcommand*{\fixed}{\mathop{}\!\mathrm{f}}
 
 %% Buat notasi turunan pada suatu titik %%
 \newcommand{\at}[2][]{#1|_{#2}}
