--- a/Modul Kuliah/Aljabar/sections/source.tex
+++ b/Modul Kuliah/Aljabar/sections/source.tex
@@ -8,6 +8,7 @@
 	\item Olimpiade (Kompetisi) Sains Tingkat Nasional (OSN/KSN)
 	\item International Mathematical Olympiad (IMO)
 	\item International Mathematical Competition (IMC)
+	\item Baltic Way Mathematical Contest
 	\item William Lowell Putnam Mathematical Competition (Putnam)
 	\item Ujian Nasional Matematika SMA/MA (UN MTK SMA/MA)
 	\item Ujian Tulis Berbasis Komputer-Seleksi Bersama Masuk Perguruan Tinggi Negeri (UTBK-SBMPTN)
